--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <!--             <h3 class="text-center">Technical</h3> -->
 <!--             <div class="row no-gutter"> -->
                 <div class="col-lg-4 col-sm-6">
-                    <a href="autostitch/index.html" class="portfolio-box portfolio-link programming">
+                    <a href="WarpandMosaic.html" class="portfolio-box portfolio-link programming">
                         <img src="img/autostitch.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -167,7 +167,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="Pathtracer/index.html" class="portfolio-box portfolio-link programming">
+                    <a href="Pathtracer.html" class="portfolio-box portfolio-link programming">
                         <img src="img/spheres.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -182,7 +182,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="LensSimulator/index.html" class="portfolio-box portfolio-link programming">
+                    <a href="LensSimulator.html" class="portfolio-box portfolio-link programming">
                         <img src="img/dragon_lens2.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -197,7 +197,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="Rasterizester/index.html" class="portfolio-box portfolio-link programming">
+                    <a href="Rasterizester.html" class="portfolio-box portfolio-link programming">
                         <img src="img/part8_competition.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -229,7 +229,7 @@
 <!--             </div> -->
                 <div class="col-lg-4 col-sm-6">
 <!--                     <a href="https://vincent-escueta22.github.io/UCCC2018/" target="_blank" class="portfolio-box portfolio-link programming"> -->
-                    <a href="Others/index.html" class="portfolio-box portfolio-link graphic-design">
+                    <a href="UCCC2018.html" class="portfolio-box portfolio-link graphic-design">
                      <img src="img/uccc2018.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -246,7 +246,7 @@
 <!--             <div class="row no-gutter"> -->
 <!--                 <h3 class="text-center">Photography<h3> -->
                 <div class="col-lg-4 col-sm-6">
-                    <a href="Others/index.html" class="portfolio-box portfolio-link photography">
+                    <a href="UCCC2018.html" class="portfolio-box portfolio-link photography">
                         <img src="img/natashabwe.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -265,7 +265,7 @@
 <!--             <div class="row no-gutter"> -->
 <!--                 <h3 class="text-center">Graphic Design </h3> -->
                 <div class="col-lg-4 col-sm-6">
-                    <a href="Others/index.html" class="portfolio-box portfolio-link graphic-design">
+                    <a href="UCCC2018.html" class="portfolio-box portfolio-link graphic-design">
                         <img src="img/belovede.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
