--- a/UCCC2018.html
+++ b/UCCC2018.html
@@ -9,19 +9,19 @@
     <meta name="author" content="Vincent Escueta">
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="../css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 
     <!-- Custom Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="main.css">
 
     <!-- Plugin CSS -->
-    <link rel="stylesheet" href="../css/animate.min.css" type="text/css">
+    <link rel="stylesheet" href="css/animate.min.css" type="text/css">
 </head>
-<body>
+<body id="page-top" class="fade-out">
  <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -32,20 +32,20 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="../index.html">Vincent Escueta</a>
+                <a class="navbar-brand page-scroll" href="index.html">Vincent Escueta</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="../index.html">Portfolio</a>
+                        <a class="page-scroll" href="index.html">Portfolio</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="../about.html">About</a>
+                        <a class="page-scroll" href="about.html">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="../index.html#resume">Resume</a>
+                        <a class="page-scroll" href="index.html#resume">Resume</a>
                     </li>
                 </ul>
             </div>
@@ -66,22 +66,22 @@
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <img src="img/NameTag.png"  />
+                    <img src="Others/img/NameTag.png"  />
                     <p align="middle">Nametag made in Adobe Illustrator</p>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <img src="img/facebook_watermark3.png"  />
+                    <img src="Others/img/facebook_watermark3.png"  />
                     <p align="middle">Facebook watermark made in Adobe Photoshop</p>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/Flyerfront.png"  />
+                    <img src="Others/img/Flyerfront.png"  />
               </div>
               <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/Flyerback.png"  />
+                    <img src="Others/img/Flyerback.png"  />
               </div>
             </div>
             <div class="row">
@@ -91,13 +91,13 @@
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <img src="img/FrontandBack Cover.png"  />
+                    <img src="Others/img/FrontandBack Cover.png"  />
                     <p align="middle">Front and back cover of the brochure made in Adobe Photoshop</p>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <img src="img/snapchat.png"  />
+                    <img src="Others/img/snapchat.png"  />
                     <p align="middle">Snapchat filter made in Adobe Photoshop</p>
               </div>
             </div>
@@ -116,17 +116,17 @@
             </div>
         </div>
     </section>
-    <script src=../"js/jquery.js"></script>
+    <script src="js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="../js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="../js/jquery.easing.min.js"></script>
-    <script src="../js/jquery.fittext.js"></script>
-    <script src="../js/wow.min.js"></script>
-    <script src="../js/scrolling-nav.js"></script>
-    <script src="../js/faded.js"></script>
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/jquery.fittext.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script src="js/scrolling-nav.js"></script>
+    <script src="js/faded.js"></script>
 
 </body>
 </html>
