Update and rename autostitch/index.html to WarpandMosaic.html

--- a/WarpandMosaic.html
+++ b/WarpandMosaic.html
@@ -9,19 +9,19 @@
     <meta name="author" content="Vincent Escueta">
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="../css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 
     <!-- Custom Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="main.css">
 
     <!-- Plugin CSS -->
-    <link rel="stylesheet" href="../css/animate.min.css" type="text/css">
+    <link rel="stylesheet" href="css/animate.min.css" type="text/css">
 </head>
-<body>
+<body id="page-top" class="fade-out">
  <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -32,20 +32,20 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="../index.html">Vincent Escueta</a>
+                <a class="navbar-brand page-scroll" href="index.html">Vincent Escueta</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="../index.html">Portfolio</a>
+                        <a class="page-scroll" href="index.html">Portfolio</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="../about.html">About</a>
+                        <a class="page-scroll" href="about.html">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="../index.html#resume">Resume</a>
+                        <a class="page-scroll" href="index.html#resume">Resume</a>
                     </li>
                 </ul>
             </div>
@@ -64,11 +64,11 @@
     <div class="container ">
         <div class="row">
             <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/homography.PNG"  />
+                    <img src="autostitch/img/homography.PNG"  />
                     <p align="middle">Homography Matrix</p>
             </div>
             <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/homography_h.png"  />
+                    <img src="autostitch/img/homography_h.png"  />
                     <p align="middle">Ah = b</p>
             </div>
         </div>
@@ -85,31 +85,31 @@
         <div class="container ">
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/guadalupe.jpg" />
+                    <img src="autostitch/img/guadalupe.jpg" />
                     <p align="middle">Our Lady of Guadalupe</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/warped_g2.jpg" />
+                    <img src="autostitch/img/warped_g2.jpg" />
                     <p align="middle">Warped Guadalupe</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/jtgt.jpg" />
+                    <img src="autostitch/img/jtgt.jpg" />
                     <p align="middle">SF Japanese Tea Garden</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/warped_jtgt.jpg" />
+                    <img src="autostitch/img/warped_jtgt.jpg" />
                     <p align="middle">Warped Tea Garden</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/ms.jpg" />
+                    <img src="autostitch/img/ms.jpg" />
                     <p align="middle">Memorial Stadium</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/warped_ms3.jpg" />
+                    <img src="autostitch/img/warped_ms3.jpg" />
                     <p align="middle">California</p>
                 </div>
             </div>
@@ -126,79 +126,79 @@
         <div class="container ">
             <div class="row">
                 <div class="col-lg-4 col-sm-6 text-center photos">
-                    <img src="img/27.png" />
+                    <img src="autostitch/img/27.png" />
                     <p align="middle">Yosemite points</p>
                 </div>
                 <div class="col-lg-4 col-sm-6 text-center photos">
-                    <img src="img/tp.png" />
+                    <img src="autostitch/img/tp.png" />
                     <p align="middle">Lake Tahoe points</p>
                 </div>
                 <div class="col-lg-4 col-sm-6 text-center photos">
-                    <img src="img/tahoepoints.jpg" />
+                    <img src="autostitch/img/tahoepoints.jpg" />
                     <p align="middle"> More Lake Tahoe points</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/y1.jpg" />
+                    <img src="autostitch/img/y1.jpg" />
                     <p align="middle">Yosemite Left</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/y0.jpg" />
+                    <img src="autostitch/img/y0.jpg" />
                     <p align="middle">Yosemite Right</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-sm-6 text-center photos">
-                    <img src="img/y2_warp3.jpg" />
+                    <img src="autostitch/img/y2_warp3.jpg" />
                     <p align="middle">Half Dome overlay</p>
                 </div>
                 <div class="col-lg-4 col-sm-6 text-center photos">
-                    <img src="img/y2_warp7.jpg" />
+                    <img src="autostitch/img/y2_warp7.jpg" />
                     <p align="middle">Half Dome weights</p>
                 </div>
                 <div class="col-lg-4 col-sm-6 text-center photos">
-                    <img src="img/y2_warp_mb.jpg" />
+                    <img src="autostitch/img/y2_warp_mb.jpg" />
                     <p align="middle">Half Dome multiresolution blending</p>
                 </div>
             </div>
             <div class="row">
                  <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/tl.jpg" />
+                    <img src="autostitch/img/tl.jpg" />
                     <p align="middle">Lake Tahoe Left</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/tr.jpg" />
+                    <img src="autostitch/img/tr.jpg" />
                     <p align="middle">Lake Tahoe Right</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/tw.jpg" />
+                    <img src="autostitch/img/tw.jpg" />
                     <p align="middle">Lake Tahoe weights</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/tahoe.jpg" />
+                    <img src="autostitch/img/tahoe.jpg" />
                     <p align="middle">Lake Tahoe multiresolution blending</p>
                 </div>
             </div>
             <div class="row">
                  <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/lefttahoe.jpg" />
+                    <img src="autostitch/img/lefttahoe.jpg" />
                     <p align="middle">More Lake Tahoe Left</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/tahoeright.jpg" />
+                    <img src="autostitch/img/tahoeright.jpg" />
                     <p align="middle">More Lake Tahoe Right</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/tahoewarp.jpg" />
+                    <img src="autostitch/img/tahoewarp.jpg" />
                     <p align="middle">More Lake Tahoe weights</p>
                 </div>
                 <div class="col-lg-6 col-sm-6 text-center photos">
-                    <img src="img/tahoewarp3.jpg" />
+                    <img src="autostitch/img/tahoewarp3.jpg" />
                     <p align="middle">More Lake Tahoe multiresolution blending</p>
                 </div>
             </div>
@@ -216,7 +216,7 @@
     <div class="container ">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center photos">
-                <img src="img/samples.png" />
+                <img src="autostitch/img/samples.png" />
                 <p align="middle">Points as results of RANSAC</p>
             </div>
         </div>
@@ -225,31 +225,31 @@
     <div class="container ">
         <div class="row">
             <div class="col-lg-6 col-sm-6 text-center photos">
-                <img src="img/tahoewarp.jpg" />
+                <img src="autostitch/img/tahoewarp.jpg" />
                 <p align="middle">Tahoe Sunset Manual weights</p>
             </div>
             <div class="col-lg-6 col-sm-6 text-center photos">
-                <img src="img/tahoe_sunset.jpg" />
+                <img src="autostitch/img/tahoe_sunset.jpg" />
                 <p align="middle">Tahoe Sunset RANSAC weights</p>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-6 col-sm-6 text-center photos">
-                <img src="img/tw.jpg" />
+                <img src="autostitch/img/tw.jpg" />
                 <p align="middle">Lake Tahoe Manual weights</p>
             </div>
             <div class="col-lg-6 col-sm-6 text-center photos">
-                <img src="img/tahoe11.jpg" />
+                <img src="autostitch/img/tahoe11.jpg" />
                 <p align="middle">Lake Tahoe RANSAC weights</p>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-6 col-sm-6 text-center photos">
-                <img src="img/y2_warp7.jpg" />
+                <img src="autostitch/img/y2_warp7.jpg" />
                 <p align="middle">Half Dome Manual weights</p>
             </div>
             <div class="col-lg-6 col-sm-6 text-center photos">
-                <img src="img/ransac_yosemite15.jpg" />
+                <img src="autostitch/img/ransac_yosemite15.jpg" />
                 <p align="middle">Half Dome RANSAC weights</p>
             </div>
         </div>
@@ -268,17 +268,17 @@
             </div>
         </div>
     </section>
-    <script src=../"js/jquery.js"></script>
+    <script src="js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="../js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="../js/jquery.easing.min.js"></script>
-    <script src="../js/jquery.fittext.js"></script>
-    <script src="../js/wow.min.js"></script>
-    <script src="../js/scrolling-nav.js"></script>
-    <script src="../js/faded.js"></script>
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/jquery.fittext.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script src="js/scrolling-nav.js"></script>
+    <script src="js/faded.js"></script>
 </body>
 </html>
 
