updated the last links

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 <!--             <div class="row no-gutter"> -->
 <!--                 <h3 class="text-center">Photography<h3> -->
                 <div class="col-lg-4 col-sm-6">
-                    <a href="UCCC2018.html" class="portfolio-box portfolio-link photography">
+                    <a href="Photography.html" class="portfolio-box portfolio-link photography">
                         <img src="img/natashabwe.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -265,7 +265,7 @@
 <!--             <div class="row no-gutter"> -->
 <!--                 <h3 class="text-center">Graphic Design </h3> -->
                 <div class="col-lg-4 col-sm-6">
-                    <a href="UCCC2018.html" class="portfolio-box portfolio-link graphic-design">
+                    <a href="GraphicDesign.html" class="portfolio-box portfolio-link graphic-design">
                         <img src="img/belovede.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
