--- a/index.html
+++ b/index.html
@@ -291,11 +291,13 @@
                 <a href="Vincent_Escueta_resume.pdf" target="_blank" class="btn btn-default btn-xl wow tada"><i class="fa fa-lg fa-save fa-download wow bounceIn text-primary"></i> Résumé</a>
             </div>
             <div class="row">
-                    <p><a href="mailto:vincent.escueta22@gmail.com" target="_blank"><i class="fa fa-envelope-o wow bounceIn" data-wow-delay=".2s"></i></a>
+                    <p>
+                       <a href="mailto:vincent.escueta22@gmail.com" target="_blank"><i class="fa fa-envelope-o wow bounceIn" data-wow-delay=".2s"></i></a>
                        <a href="https://www.linkedin.com/in/vincentescueta/" target="_blank"><i class="fa fa-linkedin wow bounceIn"></i></a>
                        <a href="https://github.com/vincent-escueta22" target="_blank"><i class="fa fa-github-alt wow bounceIn" data-wow-delay=".3s"></i>
-                       <a href="https://www.facebook.com/vincent.escueta22" target="_blank"<i class="fa fa-facebook wow bounceIn" data-wow-delay=".1s"></i></a></p>
-                       <a href="https://www.imdb.com/name/nm10309356/?ref_=m_ttfcd_cr177" target="_blank"<i class="fab fa-imdb wow bounceIn" data-wow-delay=".5s""></i></a></p>
+                       <a href="https://www.facebook.com/vincent.escueta22" target="_blank"<i class="fa fa-facebook wow bounceIn" data-wow-delay=".1s"></i></a>
+                       <a href="https://www.imdb.com/name/nm10309356/?ref_=m_ttfcd_cr177" target="_blank"<i class="fab fa-imdb wow bounceIn" data-wow-delay=".5s""></i></a>
+                    </p>
                     <p>Last Updated: December 18, 2018</p>    
             </div>
         </div>
