--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
 
     <!-- Plugin CSS -->
@@ -292,11 +292,11 @@
             </div>
             <div class="row">
                     <p>
-                       <a href="mailto:vincent.escueta22@gmail.com" target="_blank"><i class="fa fa-envelope-o wow bounceIn" data-wow-delay=".2s"></i></a>
-                       <a href="https://www.linkedin.com/in/vincentescueta/" target="_blank"><i class="fa fa-linkedin wow bounceIn"></i></a>
-                       <a href="https://github.com/vincent-escueta22" target="_blank"><i class="fa fa-github-alt wow bounceIn" data-wow-delay=".3s"></i>
-                       <a href="https://www.facebook.com/vincent.escueta22" target="_blank"<i class="fa fa-facebook wow bounceIn" data-wow-delay=".1s"></i></a>
-                       <a href="https://www.imdb.com/name/nm10309356/?ref_=m_ttfcd_cr177" target="_blank"<i class="fa fa-imdb wow bounceIn" data-wow-delay=".5s""></i></a>
+                       <a href="mailto:vincent.escueta22@gmail.com" target="_blank"><i class="fa fas-envelope-o wow bounceIn" data-wow-delay=".2s"></i></a>
+                       <a href="https://www.linkedin.com/in/vincentescueta/" target="_blank"><i class="fas fa-linkedin wow bounceIn"></i></a>
+                       <a href="https://github.com/vincent-escueta22" target="_blank"><i class="fas fa-github-alt wow bounceIn" data-wow-delay=".3s"></i>
+                       <a href="https://www.facebook.com/vincent.escueta22" target="_blank"<i class="fas fa-facebook wow bounceIn" data-wow-delay=".1s"></i></a>
+                       <a href="https://www.imdb.com/name/nm10309356/?ref_=m_ttfcd_cr177" target="_blank"<i class="fas fa-imdb wow bounceIn" data-wow-delay=".5s""></i></a>
                     </p>
                     <p>Last Updated: December 18, 2018</p>    
             </div>
