--- a/index.html
+++ b/index.html
@@ -292,11 +292,11 @@
             </div>
             <div class="row">
                     <p>
-                       <a href="mailto:vincent.escueta22@gmail.com" target="_blank"><i class="fa fas-envelope-o wow bounceIn" data-wow-delay=".2s"></i></a>
-                       <a href="https://www.linkedin.com/in/vincentescueta/" target="_blank"><i class="fas fa-linkedin wow bounceIn"></i></a>
-                       <a href="https://github.com/vincent-escueta22" target="_blank"><i class="fas fa-github-alt wow bounceIn" data-wow-delay=".3s"></i>
-                       <a href="https://www.facebook.com/vincent.escueta22" target="_blank"<i class="fas fa-facebook wow bounceIn" data-wow-delay=".1s"></i></a>
-                       <a href="https://www.imdb.com/name/nm10309356/?ref_=m_ttfcd_cr177" target="_blank"<i class="fas fa-imdb wow bounceIn" data-wow-delay=".5s""></i></a>
+                       <a href="mailto:vincent.escueta22@gmail.com" target="_blank"><i class="fab fa-envelope wow bounceIn" data-wow-delay=".2s"></i></a>
+                       <a href="https://www.linkedin.com/in/vincentescueta/" target="_blank"><i class="fab fa-linkedin wow bounceIn"></i></a>
+                       <a href="https://github.com/vincent-escueta22" target="_blank"><i class="fab fa-github-alt wow bounceIn" data-wow-delay=".3s"></i>
+                       <a href="https://www.facebook.com/vincent.escueta22" target="_blank"<i class="fab fa-facebook wow bounceIn" data-wow-delay=".1s"></i></a>
+                       <a href="https://www.imdb.com/name/nm10309356/?ref_=m_ttfcd_cr177" target="_blank"<i class="fab fa-imdb wow bounceIn" data-wow-delay=".5s""></i></a>
                     </p>
                     <p>Last Updated: December 18, 2018</p>    
             </div>
