--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             </div>
             <div class="row">
                     <p>
-                       <a href="mailto:vincent.escueta22@gmail.com" target="_blank"><i class="fab fa-envelope wow bounceIn" data-wow-delay=".2s"></i></a>
+                       <a href="mailto:vincent.escueta22@gmail.com" target="_blank"><i class="fas fa-envelope wow bounceIn" data-wow-delay=".2s"></i></a>
                        <a href="https://www.linkedin.com/in/vincentescueta/" target="_blank"><i class="fab fa-linkedin wow bounceIn"></i></a>
                        <a href="https://github.com/vincent-escueta22" target="_blank"><i class="fab fa-github-alt wow bounceIn" data-wow-delay=".3s"></i>
                        <a href="https://www.facebook.com/vincent.escueta22" target="_blank"<i class="fab fa-facebook wow bounceIn" data-wow-delay=".1s"></i></a>
