--- a/Colorizing.html
+++ b/Colorizing.html
@@ -66,75 +66,75 @@
       <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
         <div class="slideshow-container">
          <div class="slide">
-                    <img src="Images/img/emirEdgeColored.jpg" weidth="720">
+                    <img src="Images/img/emirEdgeColored.jpg" width="720">
                     <p align="middle">canny edge filter emir.tif: R:[106  41] G:[49 23] TIME:26.2144749165</p>
         </div>
          <div class="slide">
-                    <img src="Images/img/harvestersEdgeColored.jpg" weidth="720">
+                    <img src="Images/img/harvestersEdgeColored.jpg" width="720">
                     <p align="middle">canny edge filter harvesters.tif: R:[124  15] G:[60 18] TIME:25.585105896</p>
         </div>
          <div class="slide">
-                    <img src="Images/img/iconEdgeColored.jpg" weidth="720">
+                    <img src="Images/img/iconEdgeColored.jpg" width="720">
                     <p align="middle">canny edge filter icon.tif: R:[91 23] G:[38 16] TIME:26.5196139812</p>
         </div>
          <div class="slide">
-                    <img src="Images/img/ladyEdgeColored.jpg" weidth="720">
+                    <img src="Images/img/ladyEdgeColored.jpg" width="720">
                     <p align="middle">canny edge filter lady.tif: R:[114  15] G:[56  9] TIME:29.0473020077</p>
         </div>
         <div class="slide">
-                    <img src="Images/img/self_portraitEdgeColored.jpg" weidth="720">
+                    <img src="Images/img/self_portraitEdgeColored.jpg" width="720">
                     <p align="middle">canny edge filter self_portrait.tif: R:[175  37] G:[77 29] TIME:28.707857132</p>
         </div>
          <div class="slide">
-                    <img src="Images/img/three_generationsEdgeColored.jpg" weidth="720">
+                    <img src="Images/img/three_generationsEdgeColored.jpg" width="720">
                     <p align="middle">canny edge filter three_generations.tif: R:[113  11] G:[54 17] TIME:26.2358720303</p>
         </div>
          <div class="slide">
-                    <img src="Images/img/trainEdgeColored.jpg" weidth="720">
+                    <img src="Images/img/trainEdgeColored.jpg" width="720">
                     <p align="middle">canny edge filter train.tif: R:[85 34] G:[40  8] TIME:26.7940208912</p>
         </div>
          <div class="slide">
-                    <img src="Images/img/turkmenEdgeColored.jpg" weidth="720">
+                    <img src="Images/img/turkmenEdgeColored.jpg" width="720">
                     <p align="middle">canny edge filter turkmen.tif: R:[116  29] G:[57 22] TIME:27.184166193</p>
         </div>
          <div class="slide">
-                    <img src="Images/img/luganoEdgeColored.jpg" weidth="720">
+                    <img src="Images/img/luganoEdgeColored.jpg" width="720">
                     <p align="middle">extra lugano.tif: R:[120  32] G:[54  7] TIME:36.9884650707</p>
         </div>
          <div class="slide">
-                    <img src="Images/img/stmarksEdgeColored.jpg" weidth="720">
+                    <img src="Images/img/stmarksEdgeColored.jpg" width="720">
                     <p align="middle">extra stmarks.tif: R:[113  30] G:[47 13] TIME:34.7976961136 </p>
         </div>
          <div class="slide">
-                    <img src="Images/img/telescopeEdgeColored.jpg" weidth="720">
+                    <img src="Images/img/telescopeEdgeColored.jpg" width="720">
                     <p align="middle">extra telescope.tif: R:[144  54] G:[67 30] TIME:37.0999400616</p>
         </div>
          <div class="slide">
-                    <img src="Images/img/mozhaiskEdgeColored.jpg" weidth="720">
+                    <img src="Images/img/mozhaiskEdgeColored.jpg" width="720">
                     <p align="middle">extra mozhaisk.tif: R:[92 25] G:[41 15] TIME:35.2776269913</p>
         </div>
          <div class="slide">
-                    <img src="Images/img/peopleEdgeColored.jpg" weidth="720">
+                    <img src="Images/img/peopleEdgeColored.jpg" width="720">
                     <p align="middle">extra people.tif: R:[157  33] G:[72 21] TIME:34.1512980461</p>
         </div>
          <div class="slide">
-                    <img src="Images/img/people2EdgeColored.jpg" weidth="720">
+                    <img src="Images/img/people2EdgeColored.jpg" width="720">
                     <p align="middle">extra people2.tif: R:[133  39] G:[62 25] TIME:34.4929409027 </p>
         </div>
          <div class="slide">
-                    <img src="Images/img/cathedralEdgeColored.jpg" weidth="720">
+                    <img src="Images/img/cathedralEdgeColored.jpg" width="720">
                     <p align="middle">canny edge filter cathedral.jpg: R:[12  3] G:[5 2] TIME:0.789291143417</p>
         </div>
          <div class="slide">
-                    <img src="Images/img/monasteryEdgeColored.jpg" weidth="720">
+                    <img src="Images/img/monasteryEdgeColored.jpg" width="720">
                     <p align="middle">canny edge filter monastery.jpg: R:[2 2] G:[-3  2] TIME:0.951406002045</p>
         </div>
         <div class="slide">
-                    <img src="Images/img/nativityEdgeColored.jpg" weidth="720">
+                    <img src="Images/img/nativityEdgeColored.jpg" width="720">
                     <p align="middle">canny edge filter nativity.jpg: R:[8 0] G:[3 1] TIME:0.773239135742</p>
         </div>
          <div class="slide">
-                    <img src="Images/img/settlersEdgeColored.jpg" weidth="720">
+                    <img src="Images/img/settlersEdgeColored.jpg" width="720">
                     <p align="middle">canny edge filter settlers.jpg: R:[14 -1] G:[7 0] TIME:0.621767044067</p>
         </div>
          <a class="prev hvr-grow" onclick="plusSlides(-1)">&#10094;</a>
