--- a/GraphicDesign.html
+++ b/GraphicDesign.html
@@ -75,6 +75,7 @@
                        <a href="https://github.com/vincent-escueta22" target="_blank"><i class="fab fa-github-alt"></i>
                        <a href="https://www.facebook.com/vincent.escueta22" target="_blank"><i class="fab fa-facebook"></i></a>
                        <a href="https://www.imdb.com/name/nm10309356/?ref_=m_ttfcd_cr177" target="_blank"><i class="fab fa-imdb"></i></a>
+                       <a href="https://www.instagram.com/vincentescueta/" target="_blank"><i class="fab fa-instagram"></i></a>
                     </p>
                     <p>Last Updated: December 18, 2018</p>    
             </div>
