--- a/Photography.html
+++ b/Photography.html
@@ -61,25 +61,31 @@
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                     <img src="Photography/img/DSC_0299e.jpg"  />
-                    <p align="middle">ISO 500, 1/500s, f/4, 50mm</p>
+                    <p align="middle">Natasha at Land's End - ISO 500, 1/500s, f/4, 50mm</p>
+              </div>
+            </div>
+             <div class="row">
+              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
+                    <img src="Photography/img/DSC_0281elo.jpg"  />
+                    <p align="middle">Natasha at Land's End 2- ISO 5000, 1/500s, f/4, 50mm</p>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                     <img src="Photography/img/DSC_0455e.jpg"  />
-                    <p align="middle">ISO 100, 8.7s, f/14, 50mm</p>
+                    <p align="middle">Couple in Berkeley - ISO 100, 8.7s, f/14, 50mm</p>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                     <img src="Photography/img/DSC_0562e.jpg"  />
-                    <p align="middle">ISO 1250, 1/80s f/2.8 50mm</p>
+                    <p align="middle">Cathedral of Saint Mary of the Assumption - ISO 1250, 1/80s f/2.8 50mm</p>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                     <img src="Photography/img/DSC_0705e.jpg"  />
-                    <p align="middle">ISO 4000, 1/100s, f/2.8 50mm</p>
+                    <p align="middle">Natasha at Oakland - ISO 4000, 1/100s, f/2.8 50mm</p>
               </div>
             </div>
         </div>
