--- a/Photography.html
+++ b/Photography.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-    <title>Vincent Escueta  |  UCCC 2018</title>
+    <title>Vincent Escueta  |  Photography</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -56,36 +56,37 @@
     <header class="bg"> </header>
 <section class="bg">
 <h1 align="middle">Personal Photography</h1>
+<h3 align="middle">Camera Body: Nikon D750</h1>
         <br><br>
         <div class="container ">
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                     <img src="Photography/img/DSC_0299e.jpg"  />
-                    <p align="middle">Natasha at Land's End - ISO 500, 1/500s, f/4, 50mm</p>
+                    <p align="middle">Natasha at Land's End - ISO 500, 1/500s, f/4, 50mm, Adobe Photoshop</p>
               </div>
             </div>
              <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                     <img src="Photography/img/DSC_0281elo.jpg"  />
-                    <p align="middle">Natasha at Land's End 2- ISO 5000, 1/500s, f/4, 50mm</p>
+                    <p align="middle">Natasha at Land's End 2- ISO 5000, 1/500s, f/4, 50mm, Adobe Photoshop</p>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                     <img src="Photography/img/DSC_0455e.jpg"  />
-                    <p align="middle">Couple in Berkeley - ISO 100, 8.7s, f/14, 50mm</p>
+                    <p align="middle">Couple in Berkeley - ISO 100, 8.7s, f/14, 50mm, Adobe Photoshop</p>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                     <img src="Photography/img/DSC_0562e.jpg"  />
-                    <p align="middle">Cathedral of Saint Mary of the Assumption - ISO 1250, 1/80s f/2.8 50mm</p>
+                    <p align="middle">Cathedral of Saint Mary of the Assumption - ISO 1250, 1/80s f/2.8 50mm, Adobe Photoshop</p>
               </div>
             </div>
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
                     <img src="Photography/img/DSC_0705e.jpg"  />
-                    <p align="middle">Natasha at Oakland - ISO 4000, 1/100s, f/2.8 50mm</p>
+                    <p align="middle">Natasha at Oakland - ISO 4000, 1/100s, f/2.8 50mm, Adobe Photoshop</p>
               </div>
             </div>
         </div>
