--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <!--             <h3 class="text-center">Animation</h3> -->
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6 animation">
-                    <a href="https://youtu.be/BLLZ2hOf1eI" target="_blank" class="portfolio-box portfolio-link animation">
+                    <a href="Stargazing.html" class="portfolio-box portfolio-link animation">
                         <img src="img/rory.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -104,7 +104,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6 animation">
-                    <a href="https://www.youtube.com/watch?v=etZ4_-EFQbs" target="_blank" class="portfolio-box portfolio-link animation">
+                    <a href="TheGenerousGhost.html" class="portfolio-box portfolio-link animation">
                         <img src="img/The_Generous_Ghost.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -112,7 +112,7 @@
                                     Animation: Cloth Simulation, Rigging
                                 </div>
                                 <div class="project-name">
-                                    The Generous Ghost (Opens New Page)
+                                    The Generous Ghost
                                 </div>
                             </div>
                         </div>
