--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                     Animation: Lighting, Modeling
                                 </div>
                                 <div class="project-name">
-                                    Stargazing (Opens New Page)
+                                    Stargazing
                                 </div>
                             </div>
                         </div>
