--- a/UCCC2018.html
+++ b/UCCC2018.html
@@ -60,7 +60,7 @@
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center">
                   <br><br><h2><a href="https://vincent-escueta22.github.io/UCCC2018/" target="_blank">Click here for the UCCC 2018 Website</a></h2>
-                  <h3 align="middle">Made with HTML, CSS3, and JavaScript</h3><br><br><br><br>
+                  <p align="middle">Made with HTML, CSS3, and JavaScript</p><br><br><br><br>
                 </div>
             </div>
             <div class="row">
