--- a/TheGenerousGhost.html
+++ b/TheGenerousGhost.html
@@ -59,12 +59,11 @@
         <div class="container ">
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center">
-                  <br><br><h2><a href="https://www.youtube.com/watch?v=etZ4_-EFQbs" target="_blank">Click here for the full short (1 minute and 50 seconds).</a></h2>
-                  <h3 align="middle">Made with Maya and rendered with Renderman 20</h3><br>
-                  <ul align="middle">
-                    <li><p>I did the cloth simulation throughout the shot.</p></li>
-                    <li><p>I modeled and rigged the main character.</p></li>
-                  </ul>
+                  <br><br><h2><a href="https://www.youtube.com/watch?v=etZ4_-EFQbs" target="_blank">Click here for the full short (1:50)</a></h2>
+                  <p align="middle">Made with Maya and rendered with Renderman 20</p><br><br>
+                  <h2>My Contributions</h2>
+                  <p align="middle">I did the cloth simulation throughout the shot.</p>
+                  <p align="middle">I modeled and rigged the main character.</p>
                 <br><br><br><br>
                 </div>
             </div>
