--- a/Stargazing.html
+++ b/Stargazing.html
@@ -59,13 +59,13 @@
         <div class="container ">
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center">
-                  <br><br><h2><a href="https://www.youtube.com/watch?v=BLLZ2hOf1eI&feature=youtu.be" target="_blank">Click here for the full short (50 seconds).</a></h2>
-                  <h3 align="middle">Made with Maya and rendered with Renderman 21</h3><br>
-                  <ul align="middle">
-                    <li><p>I did the master lighting for the whole short.</p></li>
-                    <li><p>I lit schene where the main character turns on all the Christmas lights(0:28-0:30).</p></li>
-                    <li><p>I modeled some of the background items such as the telescope and bicycle wheel.</p></li>
-                    <li><p>I managed the ender settings throughout</p></li>
+                  <br><br><h2><a href="https://www.youtube.com/watch?v=BLLZ2hOf1eI&feature=youtu.be" target="_blank">Click here for the full short (0:50).</a></h2>
+                  <p align="middle">Made with Maya and rendered with Renderman 21</p><br><br>
+                  <h2 align="middle">My Contributions</h2>
+                    <p align="middle">I did the master lighting for the whole short.</p>
+                    <p align="middle">I lit schene where the main character turns on all the Christmas lights(0:28-0:30).</p>
+                    <p align="middle">I modeled some of the background items such as the telescope and bicycle wheel.</p>
+    <p>I managed the ender settings throughout</p>
                   </ul>
                 <br><br><br><br>
                 </div>
