--- a/Stargazing.html
+++ b/Stargazing.html
@@ -63,7 +63,7 @@
                   <p align="middle">Made with Maya and rendered with Renderman 21</p><br><br>
                   <h2 align="middle">My Contributions</h2>
                     <p align="middle">I did the master lighting for the whole short.</p>
-                    <p align="middle">I lit schene where the main character turns on all the Christmas lights(0:28-0:30).</p>
+                    <p align="middle">I lit shots where the main character turns on all the Christmas lights(0:28-0:30).</p>
                     <p align="middle">I modeled some of the background items such as the telescope and bicycle wheel.</p>
                 <br><br><br><br>
                 </div>
