--- a/Stargazing.html
+++ b/Stargazing.html
@@ -59,7 +59,7 @@
         <div class="container ">
             <div class="row">
               <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center">
-                  <br><br><h2><a href="https://www.youtube.com/watch?v=BLLZ2hOf1eI&feature=youtu.be" target="_blank">Click here for the full short (0:50).</a></h2>
+                  <br><br><h2><a href="https://www.youtube.com/watch?v=BLLZ2hOf1eI&feature=youtu.be" target="_blank">Click here for the full short (0:50)</a></h2>
                   <p align="middle">Made with Maya and rendered with Renderman 21</p><br><br>
                   <h2 align="middle">My Contributions</h2>
                     <p align="middle">I did the master lighting for the whole short.</p>
