--- a/Photography.html
+++ b/Photography.html
@@ -60,31 +60,32 @@
         <br><br>
         <div class="container ">
             <div class="row">
-              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
+              <div class="col-lg-8 col-sm-6 text-center photos">
                     <img src="Photography/img/DSC_0299e.jpg"  />
                     <p align="middle">Natasha at Land's End - ISO 500, 1/500s, f/4, 50mm, Adobe Photoshop</p>
               </div>
-            </div>
-             <div class="row">
-              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
+              <div class="col-lg-8 col-sm-6 text-center photos">
                     <img src="Photography/img/DSC_0281elo.jpg"  />
                     <p align="middle">Natasha at Land's End 2- ISO 5000, 1/500s, f/4, 50mm, Adobe Photoshop</p>
               </div>
             </div>
             <div class="row">
-              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
+              <div class="col-lg-8 col-sm-6 text-center photos">
+                    <img src="Photography/img/DSC_0256elo.jpg"  />
+                    <p align="middle">Natasha at Land's End 3- ISO 160, 1/500s, f/4, 50mm, Adobe Photoshop</p>
+              </div>
+              <div class="col-lg-8 col-sm-6 text-center photos">
+                    <img src="Photography/img/DSC_0562e.jpg"  />
+                    <p align="middle">Cathedral of Saint Mary of the Assumption - ISO 1250, 1/80s f/2.8 50mm, Adobe Photoshop</p>
+              </div> 
+            <div class="row">
+              
+              <div class="col-lg-8 col-sm-6 text-center photos">
                     <img src="Photography/img/DSC_0455e.jpg"  />
                     <p align="middle">Couple in Berkeley - ISO 100, 8.7s, f/14, 50mm, Adobe Photoshop</p>
               </div>
             </div>
-            <div class="row">
-              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
-                    <img src="Photography/img/DSC_0562e.jpg"  />
-                    <p align="middle">Cathedral of Saint Mary of the Assumption - ISO 1250, 1/80s f/2.8 50mm, Adobe Photoshop</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-8 col-lg-offset-2 col-sm-6 text-center photos">
+              <div class="col-lg-8 col-sm-6 text-center photos">
                     <img src="Photography/img/DSC_0705e.jpg"  />
                     <p align="middle">Natasha at Oakland - ISO 4000, 1/100s, f/2.8 50mm, Adobe Photoshop</p>
               </div>
